Fixes z-index issues in create pages, adds other small style fixes

--- a/frontend/src/styles/components/_DialogModule.sass
+++ b/frontend/src/styles/components/_DialogModule.sass
@@ -6,3 +6,6 @@
 
   [class^="Table-module_actionContainer"]
     display: none
+
+  .row--buttons
+    margin-top: $spacing-layout-m
